--- a/Resources/views/Admin/index.html.twig
+++ b/Resources/views/Admin/index.html.twig
@@ -3,48 +3,74 @@
 {% block forum %}
     {% if categories is not empty %}
         {% for element in categories %}
-    <div class="large-12 columns">
-        <div class="cadre_parentC_forum">
-            <h3 class="text-center"><a href="{{ path('incolab_forum_admin_parent_category_modify', {'slug': element.slug }) }}">{{ element.name }}</a> | <a href="">Supprimer la catégorie</a></h3>
-            <p>{{ element.description }}</p>
-        </div>
-        <div class="cat_forum">
-            <div class="row">
-                {% for subcat in element.childs %}
-                <div class="large-12 medium-12 columns">
-                    <h4><a href="{{ path('incolab_forum_admin_child_category_modify', {'parentSlug': element.slug, 'slug': subcat.slug }) }}">{{ subcat.name }}</a></h4>
-                    <p>{{ subcat.description }}</p>
-                    <hr/>
+            <div class="large-12 columns">
+                <div class="cadre_parentC_forum">
+                    <h3 class="text-center"><a href="{{ path('incolab_forum_admin_parent_category_modify', {'slug': element.slug }) }}">{{ element.name }}</a> | <a href="">Supprimer la catégorie</a></h3>
+                    <p>{{ element.description }}</p>
                 </div>
-                {% endfor %}
-                    
-                <div class="large-12 medium-12 columns">
-                    <h4><a href="{{ path('incolab_forum_admin_child_category_add', {'slugParent': element.slug }) }}">Ajouter une sous catégorie.</a></h4>
+                <div class="cat_forum">
+                    <div class="row">
+                        {% for subcat in element.childs %}
+                            <div class="large-12 medium-12 columns">
+                                <h4><a href="{{ path('incolab_forum_admin_child_category_modify', {'parentSlug': element.slug, 'slug': subcat.slug }) }}">{{ subcat.name }}</a></h4>
+                                <p>{{ subcat.description }}</p>
+                                <hr/>
+                            </div>
+                        {% endfor %}
+
+                        <div class="large-12 medium-12 columns">
+                            <h4><a href="{{ path('incolab_forum_admin_child_category_add', {'slugParent': element.slug }) }}">Ajouter une sous catégorie.</a></h4>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
         {% endfor %}
     {% else %}
-    <div class="large-12 columns">
-        <h4>No parent category at the moment.</h4>
-    </div>
+        <div class="large-12 columns">
+            <h4>No parent category at the moment.</h4>
+        </div>
     {% endif %}
     <div class="large-12 columns">
         <div class="cadre_parentC_forum">
             <h4 class="text-center">Add a parent Category</h4>
         </div>
         <div class="cat_forum">
-            {% include "IncolabForumBundle:Forms:categoryType.html.twig" with {'form': parentCatForm} %}
+            {{ form_start(parentCatForm) }}
+            {{ form_row(parentCatForm.name) }}
+            {{ form_row(parentCatForm.description) }}
+            {{ form_label(parentCatForm.readRoles) }}
+            <ul id="read-roles-fields-list" data-prototype="{{ form_widget(parentCatForm.readRoles.vars.prototype)|e }}">
+            </ul>
+            {{ form_label(parentCatForm.writeRoles) }}
+            <ul id="write-roles-fields-list" data-prototype="{{ form_widget(parentCatForm.writeRoles.vars.prototype)|e }}">
+            </ul>
+            {{ form_row(parentCatForm.position) }}
+            <input type="submit" class="button" value="Submit"/>
+            {{ form_end(parentCatForm) }}
+            {# {% include "IncolabForumBundle:Forms:categoryType.html.twig" with {'form': parentCatForm} %} #}
         </div>
     </div>
 
 {% endblock %}
 
 {% block javascripts %}
-    <script type="text/javascript">
-        var readRolesCount = '{{ parentCatForm.readRoles|length }}';
-        var writeRolesCount = '{{ parentCatForm.writeRoles|length }}';
-    </script>
     <script type="text/javascript" src="/bundles/incolabforum/js/categoryType.js"></script>
+    <script type="text/javascript">
+        var docMtm_rr = new DocMTMType("docMtm_rr", "Read Roles", "read-roles-fields-list");
+        docMtm_rr.init();
+        {% for element in parentCatForm.readRoles %}
+            docMtm_rr.insert_mtm_element("{{ writeRolesFields.vars.name }}", "{{ form_row(element) }}", "{{ form_errors(element) }}");
+        {% endfor %}
+        
+        var docMtm_wr = new DocMTMType("docMtm_wr", "Write Roles", "write-roles-fields-list");
+        docMtm_wr.init();
+        {% for element in parentCatForm.writeRoles %}
+            docMtm_wr.insert_mtm_element("{{ writeRolesFields.vars.name }}", "{{ form_row(element) }}", "{{ form_errors(element) }}");
+        {% endfor %}
+
+            /*
+             var readRolesCount = '{{ parentCatForm.readRoles|length }}';
+             var writeRolesCount = '{{ parentCatForm.writeRoles|length }}';
+             */
+    </script>
 {% endblock javascripts %}
