--- a/Resources/views/Category/category.html.twig
+++ b/Resources/views/Category/category.html.twig
@@ -53,13 +53,15 @@
     <div class="large-12 columns">
         <div class="panelCat">
             <h3 class="text-center">Add a topic</h3>
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            {% if is_granted('IS_AUTHENTICATED_FULLY') and topicForm is defined %}
                 {{ form_start(topicForm) }}
                 {{ form_widget(topicForm) }}
                 <input type="submit" class="button" value="Submit"/>
                 {{ form_end(topicForm) }}
-            {% else %}
+            {% elseif not is_granted('IS_AUTHENTICATED_FULLY') %}
                 <p>You have to be connected for add a topic. <a href="{{ path('fos_user_security_login') }}">Click here</a></p>
+            {% else %}
+                <p>You can't post in this category</p>
             {% endif %}
         </div>
     </div>
