add delete post and fix issues from DQL partial

--- a/Resources/views/Topic/show.html.twig
+++ b/Resources/views/Topic/show.html.twig
@@ -13,11 +13,13 @@
         </ul>
       </nav>
     </div>
-          <nav class="large-12 columns">
-              <ul>
-                  <li><a href="{{ path('incolab_forum_topic_delete', {slugParentCat: topic.category.parent.slug, slugCat: topic.category.slug, slugTopic: topic.slug }) }}">Supprimer le topic</a></li>
-              </ul>
-          </nav>
+    {% if is_granted('ROLE_ADMIN') %}
+    <nav class="large-12 columns">
+        <ul>
+            <li><a href="{{ path('incolab_forum_admin_topic_delete', {slugParentCat: topic.category.parent.slug, slugCat: topic.category.slug, slugTopic: topic.slug }) }}">Supprimer le topic</a></li>
+        </ul>
+    </nav>
+    {% endif %}
     <div class="large-12 columns">
         <div class="panelCat">
             <div class="row">
@@ -61,6 +63,9 @@
                         {% if app.user.username == element.author.username %}
                     <p><a class="button" href="{{ path('incolab_forum_post_edit', {slugParentCat: topic.category.parent.slug, slugCat: topic.category.slug, slugTopic: topic.slug, postId: element.id}) }}">Edit</a></p>
                         {% endif %}
+                    {% endif %}
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <p><a class="button" href="{{ path('incolab_forum_admin_post_delete', {slugParentCat: topic.category.parent.slug, slugCat: topic.category.slug, slugTopic: topic.slug, postId: element.id}) }}">Supprimer ce post</a></p>
                     {% endif %}
                 </div>
             </div>
