--- a/Resources/views/Category/category.html.twig
+++ b/Resources/views/Category/category.html.twig
@@ -66,12 +66,12 @@
     <div class="large-12 columns">
         <div class="panelCat">
             <h3 class="text-center">Add a topic</h3>
-            {% if is_granted('IS_AUTHENTICATED_FULLY') and topicForm is defined %}
+            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') and topicForm is defined %}
                 {{ form_start(topicForm) }}
                 {{ form_widget(topicForm) }}
                 <input type="submit" class="button" value="Submit"/>
                 {{ form_end(topicForm) }}
-            {% elseif not is_granted('IS_AUTHENTICATED_FULLY') %}
+            {% elseif not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 <p>You have to be connected for add a topic. <a href="{{ path('user_security_login') }}">Click here</a></p>
             {% else %}
                 <p>You can't post in this category</p>
@@ -81,7 +81,7 @@
 {% endblock %}
 
 {% block javascripts %}
-    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         <script src="/ckeditor/light/ckeditor.js"></script>
         <script>CKEDITOR.replace( 'topic_firstPost_message' );</script>
     {% endif %}
