--- a/Resources/views/Topic/add.html.twig
+++ b/Resources/views/Topic/add.html.twig
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block javascripts %}
-    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         <script src="/bundles/incolabcore/ckeditor/light/ckeditor.js"></script>
         <script>CKEDITOR.replace( 'topic_firstPost_message' );</script>
     {% endif %}
